@@ -25,6 +25,9 @@ Release 1.3.0 - unreleased
     HDFS-4794. Browsing filesystem via webui throws kerberos exception when NN 
     service RPC is enabled in a secure cluster. (Benoy Antony via jing9)
 
+    HDFS-5944. LeaseManager:findLeaseWithPrefixPath can't handle path like /a/b/
+    and cause SecondaryNameNode failed do checkpoint (Yunjiong Zhao via brandonli)
+
 Release 1.2.2 - unreleased
 
   INCOMPATIBLE CHANGES
